Add special routes to openapi spec
